# synth-graph-rs

./: .gitignore  Cargo.toml  LICENSE  LOG.md  README.md  pyproject.toml
python/synth_graph_rs/: __init__.py  pyg.py
src/: config.rs  lib.rs  main.rs
synth-graph-cli/: Cargo.toml
synth-graph-cli/src/: config.rs  main.rs  visualise.rs
synth-graph-core/: Cargo.toml
synth-graph-core/src/: lib.rs
