[package]
name = "synth_graph_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
description = "High-performance synthetic graph generation for GNN research (Rust backend). Implements SBM and cSBM with controllable homophily, node features, class structure, and degree distribution."

[lib]
name = "synth_graph_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1   # faster incremental builds during dev
