# Workspace root — two members:
#   synth-graph-core  : Rust library (cdylib for Python, rlib for the CLI binary)
#   synth-graph-cli   : Rust TUI binary (added by Wilfried during integration merge)
#
# Profile sections live here so they apply to every workspace member.

[workspace]
members = ["synth-graph-core"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1   # faster incremental builds during dev
