[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "synth-graph-rs"
version = "0.1.0"
description = "High-performance synthetic graph generation for GNN research (Rust backend)"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "synth_graph_rs"
